objects/LLC_BI__Id_Document__c.object
<CustomObject>
    <description>Forms of identification documentation collected from a relationship.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatically set when the user adds an ID Document during New Customer Onboarding. It specifies the owner of the identification document.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Identification_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Alpha_3_Country_Code__c</fullName>
        <description>Administrators populate this picklist to choose the alpha-3 code for the country of issuance for the identity document.</description>
        <inlineHelpText>Select the alpha-3 code for the country of issuance for your identification</inlineHelpText>
        <label>Alpha-3 Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <label>United States</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when the user adds an ID Document during New Customer Onboarding. It specifies the owner of the identification document.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Identification_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the date of the Id document. The date that it represents is open to interpretation by the financial institution. Note that there is already an issue date and expiration date field, so this field can be used for another type of date.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expiration_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the expiration date of the Id document.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Id_Document_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatically set when the user adds an ID Document during New Customer Onboarding. It specifies the type of identification selected.</description>
        <label>Id Document Type</label>
        <referenceTo>LLC_BI__Id_Document_Type__c</referenceTo>
        <relationshipLabel>Id Documents</relationshipLabel>
        <relationshipName>Id_Documents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Issue_Country__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the issue country of the Id document.</description>
        <label>Issuing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Issue_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the issue date of the Id document.</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Issue_State__c</fullName>
        <description>This field is optional and can be manually collected during New Customer Onboarding. This field is used to specify the state the document was issued in.</description>
        <label>Issue State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Number__c</fullName>
        <description>This field is optional and can be manually collected during New Customer Onboarding. This field is used to store the document number.</description>
        <label>Document Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Id Document</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>LLC_BI__Id_Document_Type__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Contact__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-DOC-{000000}</displayFormat>
        <label>Id Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Id Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>